--- a/dashboard.html
+++ b/dashboard.html
@@ -18,6 +18,49 @@
   <main class="container py-5">
     <h1>Bienvenido al Dashboard</h1>
     <p>Aquí puedes gestionar tus servicios y equipos.</p>
+    <!-- Modificar el main del dashboard -->
+<main class="container py-5">
+  <div class="row">
+    <div class="col-md-8">
+      <h2>Tus Generadores</h2>
+      <div id="generadores-list" class="mt-4"></div>
+    </div>
+  </div>
+</main>
+
+<script>
+  // Función para cargar datos
+  const loadGeneradores = async () => {
+    const { data, error } = await supabase
+      .from('generadores')
+      .select('*');
+
+    if (error) {
+      console.error(error);
+      return;
+    }
+
+    const container = document.getElementById('generadores-list');
+    container.innerHTML = data.map(generator => `
+      <div class="card mb-3">
+        <div class="card-body">
+          <h5>${generator.modelo}</h5>
+          <p>Estado: ${generator.estado}</p>
+          <p>Último mantención: ${new Date(generator.ultimo_mantenimiento).toLocaleDateString()}</p>
+        </div>
+      </div>
+    `).join('');
+  };
+
+  // Verificar sesión y cargar datos
+  supabase.auth.getSession().then(({ data: { session } }) => {
+    if (session) {
+      loadGeneradores();
+    } else {
+      window.location.href = 'login.html';
+    }
+  });
+</script>
   </main>
 
   <script src="scripts/auth.js"></script>
