--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
           <li class="nav-item"><a class="nav-link" href="#monitoreo">Monitoreo</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
-          <li class="nav-item"><a class="nav-link" href="login.html">Acceso Clientes</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">Acceso KRAFFTERS</a></li>
         </ul>
       </div>
     </div>
@@ -101,6 +101,7 @@
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.min.js"></script>
   <script src="scripts/app.js"></script>
 </body>
 </html>
