--- a/login.html
+++ b/login.html
@@ -24,6 +24,8 @@
         </div>
     </main>
     
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.min.js"></script>
     <script src="scripts/auth.js"></script>
+
 </body>
 </html>
