--- a/dashboard.html
+++ b/dashboard.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.min.js"></script>
+  <script src="scripts/auth.js"></script>
+
   <nav class="navbar navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#">Dashboard</a>
