--- a/index.html
+++ b/index.html
@@ -1,107 +1,116 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Energía Revolucionaria</title>
-  <link rel="stylesheet" href="styles/bootstrap.min.css">
-  <link rel="stylesheet" href="styles/main.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Energía Revolucionaria</title>
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-        <img src="images/pogo.png" alt="Logo" height="40">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
-          <li class="nav-item"><a class="nav-link" href="#monitoreo">Monitoreo</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
-          <li class="nav-item"><a class="nav-link" href="login.html">Acceso KRAFFTERS</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="container">
-      <h1>Revolucionando la Generación Energética</h1>
-      <p>Monitorización inteligente en tiempo real</p>
-      <a href="#servicios" class="btn btn-gradient btn-lg mt-3">Ver Servicios</a>
-    </div>
-  </section>
-
-  <!-- Servicios Section -->
-  <section id="servicios" class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-5 display-4 fw-bold">Nuestros Servicios</h2>
-      <div class="row g-4">
-        <!-- Servicio 1 -->
-        <div class="col-md-6 col-lg-4">
-          <div class="service-card">
-            <div class="service-icon">
-              <i class="fas fa-bolt fa-2x text-white"></i>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="images/pogo.png" alt="Logo" height="40">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#monitoreo">Monitoreo</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html">Acceso KRAFFTERS</a></li>
+                </ul>
             </div>
-            <h3 class="h4 text-center mb-3">Generadores Diésel</h3>
-            <p class="text-muted text-center">Soluciones energéticas 24/7 con tecnología de última generación</p>
-            <div class="text-center mt-4">
-              <a href="#" class="btn btn-primary">Ver detalles</a>
-            </div>
-          </div>
         </div>
+    </nav>
 
-        <!-- Servicio 2 -->
-        <div class="col-md-6 col-lg-4">
-          <div class="service-card">
-            <div class="service-icon">
-              <i class="fas fa-chart-line fa-2x text-white"></i>
-            </div>
-            <h3 class="h4 text-center mb-3">Monitoreo Inteligente</h3>
-            <p class="text-muted text-center">Seguimiento en tiempo real desde cualquier dispositivo</p>
-            <div class="text-center mt-4">
-              <a href="#" class="btn btn-primary">Demo interactivo</a>
-            </div>
-          </div>
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="container">
+            <h1>Revolucionando la Generación Energética</h1>
+            <p>Monitorización inteligente en tiempo real</p>
+            <a href="#servicios" class="btn btn-gradient btn-lg mt-3">Ver Servicios</a>
         </div>
+    </section>
 
-        <!-- Más servicios... -->
-      </div>
-    </div>
-  </section>
+    <!-- Servicios Section -->
+    <section id="servicios" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5 display-4 fw-bold">Nuestros Servicios</h2>
+            <div class="row g-4">
+                <!-- Servicio 1 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="service-card">
+                        <div class="service-icon">
+                            <i class="fas fa-bolt fa-2x text-white"></i>
+                        </div>
+                        <h3 class="h4 text-center mb-3">Generadores Diésel</h3>
+                        <p class="text-muted text-center">Soluciones energéticas 24/7 con tecnología de última generación
+                        </p>
+                        <div class="text-center mt-4">
+                            <a href="#" class="btn btn-primary">Ver detalles</a>
+                        </div>
+                    </div>
+                </div>
 
-  <!-- Monitoreo Section -->
-  <section class="monitoring-section">
-    <div class="monitoring-overlay">
-      <div class="container">
-        <div class="row g-4">
-          <div class="col-md-3">
-            <div class="stats-card">
-              <h3 class="display-4 fw-bold">+500</h3>
-              <p class="mb-0">Equipos monitoreados</p>
+                <!-- Servicio 2 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="service-card">
+                        <div class="service-icon">
+                            <i class="fas fa-chart-line fa-2x text-white"></i>
+                        </div>
+                        <h3 class="h4 text-center mb-3">Monitoreo Inteligente</h3>
+                        <p class="text-muted text-center">Seguimiento en tiempo real desde cualquier dispositivo</p>
+                        <div class="text-center mt-4">
+                            <a href="#" class="btn btn-primary">Demo interactivo</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Más servicios... -->
             </div>
-          </div>
-          <div class="col-md-3">
-            <div class="stats-card">
-              <h3 class="display-4 fw-bold">99.9%</h3>
-              <p class="mb-0">Disponibilidad</p>
-            </div>
-          </div>
-          <!-- Más estadísticas... -->
+            <p class="mt-3 text-center">
+                <small>
+                    <i class="fas fa-info-circle"></i> Los enlaces "Ver detalles" y "Demo interactivo" son enlaces de
+                    prueba.
+                </small>
+            </p>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.min.js"></script>
-  <script src="scripts/app.js"></script>
+    <!-- Monitoreo Section -->
+    <section class="monitoring-section">
+        <div class="monitoring-overlay">
+            <div class="container">
+                <div class="row g-4">
+                    <div class="col-md-3">
+                        <div class="stats-card">
+                            <h3 class="display-4 fw-bold">+500</h3>
+                            <p class="mb-0">Equipos monitoreados</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="stats-card">
+                            <h3 class="display-4 fw-bold">99.9%</h3>
+                            <p class="mb-0">Disponibilidad</p>
+                        </div>
+                    </div>
+                    <!-- Más estadísticas... -->
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.min.js"></script>
 </body>
+
 </html>
