--- a/contact.html
+++ b/contact.html
@@ -1,27 +1,55 @@
-<section id="contacto" class="py-5 bg-light">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <div class="contact-card p-5 rounded-4 shadow">
-                    <h2 class="text-center mb-4 display-5 fw-bold">Contacto Rápido</h2>
-                    <form>
-                        <div class="row g-3">
-                            <div class="col-md-6">
-                                <input type="text" class="form-control form-control-lg" placeholder="Nombre" required>
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contacto</title>
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <section id="contacto" class="py-5 bg-light">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="contact-card p-5 rounded-4 shadow">
+                        <h2 class="text-center mb-4 display-5 fw-bold">Contacto Rápido</h2>
+                        <form>
+                            <div class="row g-3">
+                                <div class="col-md-6">
+                                    <input type="text" class="form-control form-control-lg" placeholder="Nombre"
+                                        required>
+                                </div>
+                                <div class="col-md-6">
+                                    <input type="email" class="form-control form-control-lg" placeholder="Email"
+                                        required>
+                                </div>
+                                <div class="col-12">
+                                    <textarea class="form-control form-control-lg" rows="4" placeholder="Tu mensaje..."
+                                        required></textarea>
+                                </div>
+                                <div class="col-12 text-center">
+                                    <button type="submit" class="btn btn-gradient btn-lg px-5">Enviar Mensaje</button>
+                                </div>
                             </div>
-                            <div class="col-md-6">
-                                <input type="email" class="form-control form-control-lg" placeholder="Email" required>
-                            </div>
-                            <div class="col-12">
-                                <textarea class="form-control form-control-lg" rows="4" placeholder="Tu mensaje..." required></textarea>
-                            </div>
-                            <div class="col-12 text-center">
-                                <button type="submit" class="btn btn-gradient btn-lg px-5">Enviar Mensaje</button>
-                            </div>
+                        </form>
+                        <div class="mt-3 text-center">
+                            <p class="text-muted">
+                                <small>
+                                    <i class="fas fa-info-circle"></i> Este formulario es solo una demostración. No
+                                    guarda ni envía mensajes.
+                                </small>
+                            </p>
                         </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+</body>
+
+</html>
