--- a/login.html
+++ b/login.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+
 <head>
-    <!-- Mismos estilos que index.html -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Acceso Clientes</title>
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <main class="container py-5">
-        <div class="card mx-auto" style="max-width: 400px;">
-            <div class="card-body">
-                <h2 class="card-title text-center mb-4">Acceso Clientes</h2>
-                <form id="loginForm">
-                    <div class="mb-3">
-                        <input type="email" id="email" class="form-control" placeholder="Email" required>
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-lg-5">
+                <div class="login-card">
+                    <div class="card-body p-5">
+                        <div class="text-center mb-4">
+                            <img src="images/pogo.png" alt="Logo" class="logo-login mb-3">
+                            <h2 class="card-title fw-bold">Acceso Clientes</h2>
+                            <p class="text-muted">Inicia sesión para acceder al dashboard</p>
+                        </div>
+                        <form id="loginForm">
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email</label>
+                                <input type="email" id="email" class="form-control form-control-lg" placeholder="Email"
+                                    required>
+                            </div>
+                            <div class="mb-4">
+                                <label for="password" class="form-label">Contraseña</label>
+                                <input type="password" id="password" class="form-control form-control-lg"
+                                    placeholder="Contraseña" required>
+                            </div>
+                            <button type="submit" class="btn btn-gradient w-100 btn-lg">Ingresar</button>
+                        </form>
+                        <div class="text-center mt-3">
+                            <a href="#recovery" class="text-muted">¿Olvidaste tu contraseña?</a>
+                        </div>
                     </div>
-                    <div class="mb-3">
-                        <input type="password" id="password" class="form-control" placeholder="Contraseña" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary w-100">Ingresar</button>
-                </form>
-                <div class="text-center mt-3">
-                    <a href="#recovery" class="text-muted">¿Olvidaste tu contraseña?</a>
                 </div>
             </div>
         </div>
     </main>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.min.js"></script>
     <script src="scripts/auth.js"></script>
-
 </body>
+
 </html>
