--- a/login.html
+++ b/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +7,11 @@
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <!-- Load the Supabase library FIRST -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.min.js"></script>
-    <script defer src="scripts/auth.js"></script>
-
+    <!-- Load auth.js AFTER Supabase -->
+    <script defer src="scripts/auth.js"></script> 
 </head>
-
 <body>
     <main class="container py-5">
         <div class="row justify-content-center">
@@ -46,5 +45,4 @@
         </div>
     </main>
 </body>
-
 </html>
