--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="hero">
         <div class="container">
             <h1>Revolucionando la Generación Energética</h1>
-            <p>Monitorización inteligente en tiempo real</p>
+            <p>Monitorización inteligente en tiempo real!</p>
             <a href="#servicios" class="btn btn-gradient btn-lg mt-3">Ver Servicios</a>
         </div>
     </section>
