--- a/dashboard.html
+++ b/dashboard.html
@@ -38,9 +38,15 @@
     </main>
 
     <script>
+        const initializeSupabase = async () => {
+            const { createClient } = Supabase; // Import createClient
+            const supabaseUrl = 'https://gztsbqbqmesfrvywpyhl.supabase.co';
+            const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imd6dHNicWJxbWVzZnJ2eXdweWhsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzkyMDg3NDUsImV4cCI6MjA1NDc4NDc0NX0.EmRDO3s64iYw1k3OY5W44twraLnJHy6bQh3HKTtx-wI';
+            return createClient(supabaseUrl, supabaseAnonKey);
+        };
         // Function to load data
         const loadGeneradores = async () => {
-            const supabase = window.supabase;
+            const supabase = await initializeSupabase();
 
             const { data: equipos, error } = await supabase
                 .from('equipos')
@@ -83,14 +89,15 @@
         };
 
         // Verify session and load data
-        const supabase = window.supabase;
-        supabase.auth.getSession().then(({ data: { session } }) => {
+        (async () => {
+            const supabase = await initializeSupabase();
+            const { data: { session } } = await supabase.auth.getSession();
             if (session) {
                 loadGeneradores();
             } else {
                 window.location.href = 'login.html';
             }
-        });
+        })();
     </script>
 </body>
 
