--- a/index.html
+++ b/index.html
@@ -4,48 +4,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceso Clientes</title>
+    <title>Energía Revolucionaria</title>
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
-    <!-- Load the Supabase library FIRST -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.min.js"></script>
-    <!-- Load auth.js AFTER Supabase -->
-    <script defer src="scripts/auth.js"></script>
 </head>
 
 <body>
-    <main class="container py-5">
-        <div class="row justify-content-center">
-            <div class="col-md-6 col-lg-5">
-                <div class="login-card">
-                    <div class="card-body p-5">
-                        <div class="text-center mb-4">
-                            <img src="images/pogo.png" alt="Logo" class="logo-login mb-3">
-                            <h2 class="card-title fw-bold">Acceso Clientes</h2>
-                            <p class="text-muted">Inicia sesión para acceder al dashboard</p>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="images/pogo.png" alt="Logo" height="40">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#monitoreo">Monitoreo</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html">Acceso KRAFFTERS</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="container">
+            <h1>Revolucionando la Generación Energética</h1>
+            <p>Monitorización inteligente en tiempo real!</p>
+            <a href="#servicios" class="btn btn-gradient btn-lg mt-3">Ver Servicios</a>
+        </div>
+    </section>
+
+    <!-- Servicios Section -->
+    <section id="servicios" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5 display-4 fw-bold">Nuestros Servicios</h2>
+            <div class="row g-4">
+                <!-- Servicio 1 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="service-card">
+                        <div class="service-icon">
+                            <i class="fas fa-bolt fa-2x text-white"></i>
                         </div>
-                        <form id="loginForm">
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="email" id="email" class="form-control form-control-lg" placeholder="Email"
-                                    required>
-                            </div>
-                            <div class="mb-4">
-                                <label for="password" class="form-label">Contraseña</label>
-                                <input type="password" id="password" class="form-control form-control-lg"
-                                    placeholder="Contraseña" required>
-                            </div>
-                            <button type="submit" class="btn btn-gradient w-100 btn-lg">Ingresar</button>
-                        </form>
-                        <div class="text-center mt-3">
-                            <a href="#recovery" class="text-muted">¿Olvidaste tu contraseña?</a>
+                        <h3 class="h4 text-center mb-3">Generadores Diésel</h3>
+                        <p class="text-muted text-center">Soluciones energéticas 24/7 con tecnología de última generación
+                        </p>
+                        <div class="text-center mt-4">
+                            <a href="#" class="btn btn-primary">Ver detalles</a>
                         </div>
                     </div>
                 </div>
+
+                <!-- Servicio 2 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="service-card">
+                        <div class="service-icon">
+                            <i class="fas fa-chart-line fa-2x text-white"></i>
+                        </div>
+                        <h3 class="h4 text-center mb-3">Monitoreo Inteligente</h3>
+                        <p class="text-muted text-center">Seguimiento en tiempo real desde cualquier dispositivo</p>
+                        <div class="text-center mt-4">
+                            <a href="#" class="btn btn-primary">Demo interactivo</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Más servicios... -->
+            </div>
+            <p class="mt-3 text-center">
+                <small>
+                    <i class="fas fa-info-circle"></i> Los enlaces "Ver detalles" y "Demo interactivo" son enlaces de
+                    prueba.
+                </small>
+            </p>
+        </div>
+    </section>
+
+    <!-- Monitoreo Section -->
+    <section class="monitoring-section">
+        <div class="monitoring-overlay">
+            <div class="container">
+                <div class="row g-4">
+                    <div class="col-md-3">
+                        <div class="stats-card">
+                            <h3 class="display-4 fw-bold">+500</h3>
+                            <p class="mb-0">Equipos monitoreados</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="stats-card">
+                            <h3 class="display-4 fw-bold">99.9%</h3>
+                            <p class="mb-0">Disponibilidad</p>
+                        </div>
+                    </div>
+                    <!-- Más estadísticas... -->
+                </div>
             </div>
         </div>
-    </main>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
