--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
                         <div class="text-center mb-4">
                             <img src="images/pogo.png" alt="Logo" class="logo-login mb-3">
                             <h2 class="card-title fw-bold">Acceso Clientes</h2>
-                            <p class="text-muted">Inicia sesión para acceder al dashboard</p>
+                            <p class="text-muted">Inicia sesión para acceder al dashboard!</p>
                         </div>
                         <form id="loginForm">
                             <div class="mb-3">
