--- a/dashboard.html
+++ b/dashboard.html
@@ -389,7 +389,31 @@
             </div>
         </div>
     </div>
+<!-- Add to your dashboard.html file -->
 
+<!-- Loading Indicator -->
+<div id="loadingIndicator" class="position-fixed top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center bg-white bg-opacity-75" style="z-index: 1050;">
+    <div class="text-center">
+        <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status"></div>
+        <p class="mt-3">Cargando dashboard...</p>
+    </div>
+</div>
+
+<!-- Toast Container for Notifications -->
+<div id="toast-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1100;"></div>
+
+<!-- Error Alert Container -->
+<div id="error-container" class="container mt-3 d-none">
+    <div class="alert alert-danger" role="alert">
+        <h4 class="alert-heading">Error</h4>
+        <p id="error-message">Ha ocurrido un error. Por favor, recargue la página o intente más tarde.</p>
+    </div>
+</div>
+
+<!-- Main container with proper error handling -->
+<main id="main-container" class="container py-4">
+    <!-- Rest of your dashboard content -->
+</main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="scripts/dashboard.js"></script>
 </body>
