--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.min.js"></script>
+    <script src="scripts/auth.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
 </head>
 
@@ -388,7 +389,9 @@
                 Hello, world! This is a toast message.
             </div>
         </div>
-    </div>
+    </div>}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="scripts/dashboard.js"></script>
 <!-- Add to your dashboard.html file -->
 
 <!-- Loading Indicator -->
@@ -403,19 +406,4 @@
 <div id="toast-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1100;"></div>
 
 <!-- Error Alert Container -->
-<div id="error-container" class="container mt-3 d-none">
-    <div class="alert alert-danger" role="alert">
-        <h4 class="alert-heading">Error</h4>
-        <p id="error-message">Ha ocurrido un error. Por favor, recargue la página o intente más tarde.</p>
-    </div>
-</div>
-
-<!-- Main container with proper error handling -->
-<main id="main-container" class="container py-4">
-    <!-- Rest of your dashboard content -->
-</main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="scripts/dashboard.js"></script>
-</body>
-
-</html>
+<div id="error-container
