--- a/dashboard.html
+++ b/dashboard.html
@@ -389,21 +389,24 @@
                 Hello, world! This is a toast message.
             </div>
         </div>
-    </div>}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="scripts/dashboard.js"></script>
-<!-- Add to your dashboard.html file -->
-
-<!-- Loading Indicator -->
-<div id="loadingIndicator" class="position-fixed top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center bg-white bg-opacity-75" style="z-index: 1050;">
-    <div class="text-center">
-        <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status"></div>
-        <p class="mt-3">Cargando dashboard...</p>
     </div>
-</div>
 
-<!-- Toast Container for Notifications -->
-<div id="toast-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1100;"></div>
+    <!-- Loading Indicator -->
+    <div id="loadingIndicator" class="position-fixed top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center bg-white bg-opacity-75" style="z-index: 1050;">
+        <div class="text-center">
+            <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status"></div>
+            <p class="mt-3">Cargando dashboard...</p>
+        </div>
+    </div>
 
-<!-- Error Alert Container -->
-<div id="error-container
+    <!-- Toast Container for Notifications -->
+    <div id="toast-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1100;"></div>
+
+    <!-- Error Alert Container -->
+    <div id="error-container" class="d-none">
+        <div class="alert alert-danger" role="alert">
+            <span id="error-message"></span>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0
