--- a/dashboard.html
+++ b/dashboard.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.min.js"></script>
-    <script src="scripts/auth.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+    <script src="scripts/auth.js" defer></script>
+    <script src="scripts/main.js" defer></script>
 </head>
 
 <body>
@@ -400,13 +401,4 @@
     </div>
 
     <!-- Toast Container for Notifications -->
-    <div id="toast-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1100;"></div>
-
-    <!-- Error Alert Container -->
-    <div id="error-container" class="d-none">
-        <div class="alert alert-danger" role="alert">
-            <span id="error-message"></span>
-        </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0
+    <div id="toast-container" class="position-fixed top
