--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
   <script src="scripts/auth.js" defer></script>
-  <script src="scripts/main.js" defer></script>
+  <script src="scripts/dashboard.js" defer></script>
 </head>
 <body>
   <nav class="navbar navbar-dark bg-dark">
