--- a/dashboard.html
+++ b/dashboard.html
@@ -29,9 +29,9 @@
     </div>
   </nav>
 
-  <div class="container-fluid">
-    <div class="row">
-      <nav class="col-md-3 col-lg-2 bg-light sidebar py-3">
+  <div class="container-fluid mt-4">
+    <div class="row justify-content-center">
+      <div class="col-md-3 col-lg-2 bg-light sidebar py-3">
         <ul class="nav flex-column">
           <li class="nav-item">
             <a href="#equipos-tab" data-bs-toggle="tab" class="nav-link active">
@@ -54,7 +54,7 @@
             </a>
           </li>
         </ul>
-      </nav>
+      </div>
 
       <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 py-4">
         <div class="tab-content">
@@ -83,10 +83,10 @@
               </div>
             </div>
 
-            <div class="row mb-4">
+            <div class="row mb-4 text-center">
               <div class="col-md-3 mb-3">
                 <div class="card bg-primary text-white h-100">
-                  <div class="card-body d-flex align-items-center">
+                  <div class="card-body d-flex align-items-center justify-content-center">
                     <i class="fas fa-server fa-2x me-3"></i>
                     <div>
                       <h5 class="card-title mb-0">Total</h5>
@@ -97,7 +97,7 @@
               </div>
               <div class="col-md-3 mb-3">
                 <div class="card bg-success text-white h-100">
-                  <div class="card-body d-flex align-items-center">
+                  <div class="card-body d-flex align-items-center justify-content-center">
                     <i class="fas fa-check-circle fa-2x me-3"></i>
                     <div>
                       <h5 class="card-title mb-0">Oper.</h5>
@@ -108,7 +108,7 @@
               </div>
               <div class="col-md-3 mb-3">
                 <div class="card bg-warning text-white h-100">
-                  <div class="card-body d-flex align-items-center">
+                  <div class="card-body d-flex align-items-center justify-content-center">
                     <i class="fas fa-exclamation-triangle fa-2x me-3"></i>
                     <div>
                       <h5 class="card-title mb-0">Alerta</h5>
@@ -119,7 +119,7 @@
               </div>
               <div class="col-md-3 mb-3">
                 <div class="card bg-danger text-white h-100">
-                  <div class="card-body d-flex align-items-center">
+                  <div class="card-body d-flex align-items-center justify-content-center">
                     <i class="fas fa-times-circle fa-2x me-3"></i>
                     <div>
                       <h5 class="card-title mb-0">Crít.</h5>
