--- a/dashboard.html
+++ b/dashboard.html
@@ -130,6 +130,7 @@
                 <h5 class="mb-0">Lista</h5>
               </div>
               <div class="card-body" id="generadores-container">
+                <div id="pagination-container" class="d-flex justify-content-center mt-3"></div>
                 <div class="d-flex justify-content-center">
                   <div class="spinner-border text-primary" role="status">
                     <span class="visually-hidden">Cargando...</span>
